[tool.poetry]
name = "timexy"
version = "0.1.3"
description = "A spaCy custom component that extracts and normalizes dates and other temporal expressions"
authors = ["Paul Rinckens"]
maintainers = ["Paul Rinckens"]
readme = "README.md"
homepage = "https://github.com/paulrinckens/timexy"
repository = "https://github.com/paulrinckens/timexy"
documentation = "https://github.com/paulrinckens/timexy#readme"
license = "MIT"
keywords = ["python", "spaCy", "custom component", "date time extraction", "timex3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"